Enable x509v3 extensions (esp. subjectAltName)

--- a/ca.cnf
+++ b/ca.cnf
@@ -3,8 +3,15 @@ default_bits       = 4096
 default_md         = sha512
 encrypt_key        = no
 distinguished_name = req_distinguished_name
+x509_extensions    = v3_ca
 
 [ req_distinguished_name ]
 countryName         = Country Name (2 letter code)
 countryName_default = FR
 commonName          = Common Name (eg, website domain name)
+
+[ v3_ca ]
+basicConstraints = CA:TRUE
+
+[ v3_user ]
+basicConstraints = CA:FALSE
