--- a/crt.cnf
+++ b/crt.cnf
@@ -2,23 +2,25 @@
 default_ca = ca_default # The default ca section
 
 [ ca_default ]
-dir            = .              # top dir
-database       = $dir/index.txt # index file
-new_certs_dir  = $dir/newcerts  # new certs dir
+dir             = .              # top dir
+database        = $dir/index.txt # index file
+new_certs_dir   = $dir/newcerts  # new certs dir
 
-certificate    = $dir/ca/ca.crt # CA cert
-private_key    = $dir/ca/ca.key # CA private key
-serial         = $dir/serial    # serial number file
+certificate     = $dir/ca/ca.crt # CA cert
+private_key     = $dir/ca/ca.key # CA private key
+serial          = $dir/serial    # serial number file
 
-default_days   = 365            # how long to certify for
-default_md     = sha512         # hashing algorithm to use
+default_days    = 365            # how long to certify for
+default_md      = sha512         # hashing algorithm to use
 
-policy         = policy_any     # default policy
-email_in_dn    = no             # don't add the email into cert DN
-unique_subject = no             # allow several certs for the same subject
+policy          = policy_any     # default policy
+email_in_dn     = no             # don't add the email into cert DN
+unique_subject  = no             # allow several certs for the same subject
 
-name_opt       = ca_default     # subject name display option
-cert_opt       = ca_default     # certificate display option
+name_opt        = ca_default     # subject name display option
+cert_opt        = ca_default     # certificate display option
+
+copy_extensions = copy           # copy x509v3 extensions from the CSR
 
 [ policy_any ]
 countryName            = optional
@@ -33,6 +35,12 @@ default_bits       = 4096
 default_md         = sha512
 encrypt_key        = no
 distinguished_name = req_distinguished_name
+req_extensions     = v3_req
 
 [ req_distinguished_name ]
-commonName = Common Name (eg, website domain name)
+commonName = Common name (eg. example.com)
+
+[ v3_req ]
+basicConstraints = CA:FALSE
+keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+subjectAltName = ${ENV::QUICKSTART_SAN}
