Fix the version of the certificate: x509v3
Without -extensions (and -extfile when applicable), OpenSSL would generate
version 1 certificates although v3 extensions were present.

--- a/ca.cnf
+++ b/ca.cnf
@@ -12,6 +12,5 @@ commonName          = Common Name (eg, website domain name)
 
 [ v3_ca ]
 basicConstraints = CA:TRUE
-
-[ v3_user ]
-basicConstraints = CA:FALSE
+subjectKeyIdentifier=hash
+authorityKeyIdentifier=keyid:always,issuer
